ipad alignment fix

--- a/css/index.css
+++ b/css/index.css
@@ -818,6 +818,7 @@ a.footer__links__link {
     transform: translate3d(0, 0px, 0) !important; }
   .touch .scores-section__dots-nav {
     margin-top: 0 !important;
+    top: calc((100vh - 73px - 125px)/2 + 88px - 73px);
     -webkit-transform: translate3d(0, -200px, 0) !important;
     transform: translate3d(0, -200px, 0) !important;
     -webkit-transition: -webkit-transform 0.7s;
@@ -839,6 +840,7 @@ a.footer__links__link {
     position: absolute;
     z-index: 70;
     left: 3%;
+    top: calc((100vh - 73px - 130px)/2 + 88px - 73px);
     width: 40%;
     -webkit-transform: translate3d(0, -200px, 0) !important;
     transform: translate3d(0, -200px, 0) !important;
